Make add quiz-button stay fixed in its lower corner spot when list overflows viewport.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 30px 0 30px 0;
   box-sizing: border-box;
-  min-height: calc(100% - 64px);
+  /* height: calc(100% - 64px); */
 }
 
 #toolbar-title {
